Add links to C++ standard, using my N4140

--- a/ranges-ts/alg.merge.html
+++ b/ranges-ts/alg.merge.html
@@ -29,7 +29,7 @@ The resulting range shall not overlap with either of the original ranges.</p></d
 <span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result_last)</span>.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>(last1 - first1) + (last2 - first2) - 1</span>
-applications of the comparison function and each projection.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+applications of the comparison function and each projection.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='inplace_merge'></a></span><code class='itemdecl'>
 template &lt;BidirectionalIterator I, Sentinel&lt;I&gt; S, class Comp = less&lt;&gt;,
     class Proj = identity&gt;
@@ -70,5 +70,5 @@ If no additional memory is available, an algorithm with complexity
 <span class='texttt'>N</span>
 is equal to
 <span class='texttt'>last - first</span>)
-may be used.</p></div></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+may be used.</p></div></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div></div></body></html>
