--- a/ranges-ts/alg.remove.html
+++ b/ranges-ts/alg.remove.html
@@ -27,7 +27,7 @@ in the range <span class='texttt'>[first,last)</span>
 for which the following corresponding conditions hold:
 <span class='texttt'>invoke(proj, *i) == value</span>,
 <span class='texttt'>invoke(pred, invoke(proj, *i)) != false</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
-The end of the resulting range.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
+The end of the resulting range.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Exactly
 <span class='texttt'>last - first</span>
 applications of the corresponding predicate and projection.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Note:</i> each element in the range <span class='texttt'>[ret,last)</span>, where <span class='texttt'>ret</span> is
@@ -75,5 +75,5 @@ for which the following corresponding conditions do not hold:
 A pair consisting of <span class='texttt'>last</span> and the end of the resulting range.</p></div></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Exactly
 <span class='texttt'>last - first</span>
-applications of the corresponding predicate and projection.</p></div></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+applications of the corresponding predicate and projection.</p></div></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div></div></body></html>
