--- a/ranges-ts/alg.set.operations.html
+++ b/ranges-ts/alg.set.operations.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><title>[alg.set.operations]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>10</a> Algorithms library <a class='abbr_ref' href='./#algorithms'>[algorithms]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>10.5</a> Sorting and related operations <a class='abbr_ref' href='alg.sorting#alg.set.operations'>[alg.sorting]</a></h2><div id='alg.set.operations'><h3 ><a class='secnum' style='min-width:103pt'>10.5.5</a> Set operations on sorted structures <a class='abbr_ref'>[alg.set.operations]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This section defines all the basic set operations on sorted structures.
 They also work with
-<span class='texttt'>multiset</span>s (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> multiset <span class='endcsname'></span>)
+<span class='texttt'>multiset</span>s (  ISO/IEC 14882:2014 &sect;<a href='../n4140/multiset'>[multiset]</a>)
 containing multiple copies of equivalent elements.
 The semantics of the set operations are generalized to
 <span class='texttt'>multiset</span>s
