--- a/ranges-ts/alg.sort.html
+++ b/ranges-ts/alg.sort.html
@@ -31,7 +31,7 @@ It does at most <span class='math'><span class='mathalpha'>N</span> <span class=
 (where
 <span class='texttt'><span class='math'><span class='mathalpha'>N</span></span> == last - first</span>)
 comparisons; if enough extra memory is available, it is
-<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='stable.sort-3'><div class='marginalizedparent'><a class='marginalized' href='#stable.sort-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='stable.sort-3'><div class='marginalizedparent'><a class='marginalized' href='#stable.sort-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div><div id='partial.sort'><h4 ><a class='secnum' href='#partial.sort' style='min-width:118pt'>10.5.1.3</a> <span class='texttt'>partial_sort</span> <a class='abbr_ref' href='partial.sort'>[partial.sort]</a></h4><p ><span class='indexparent'><a class='index' id='partial_sort'></a></span><code class='itemdecl'>
 template &lt;RandomAccessIterator I, Sentinel&lt;I&gt; S, class Comp = less&lt;&gt;,
     class Proj = identity&gt;
