--- a/ranges-ts/algorithms.general.html
+++ b/ranges-ts/algorithms.general.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='en'><head><title>[algorithms.general]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>10</a> Algorithms library <a class='abbr_ref' href='./#algorithms'>[algorithms]</a></h1><div id='algorithms.general'><h2 ><a class='secnum' style='min-width:88pt'>10.1</a> General <a class='abbr_ref'>[algorithms.general]</a></h2><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This Clause describes components that C++ programs may use to perform
-algorithmic operations on containers (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>) and other sequences.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The following subclauses describe components for
+algorithmic operations on containers (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>) and other sequences.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The following subclauses describe components for
 non-modifying sequence operations,
 modifying sequence operations,
 and sorting and related operations,
@@ -1000,7 +1000,7 @@ suffix <span class='texttt'>_if</span> (which follows the suffix <span class='te
 Unless otherwise specified, algorithms that take function objects as arguments
 are permitted to copy those function objects freely. Programmers for whom object
 identity is important should consider using a wrapper class that points to a
-noncopied implementation object such as <span class='texttt'>reference_wrapper&lt;T&gt;</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> refwrap <span class='endcsname'></span>), or some equivalent solution.
+noncopied implementation object such as <span class='texttt'>reference_wrapper&lt;T&gt;</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/refwrap'>[refwrap]</a>), or some equivalent solution.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >In the description of the algorithms operators
 <span class='texttt'>+</span>
 and
@@ -1029,18 +1029,18 @@ behave as if they are implemented by calling <span class='texttt'>begin</span> a
 the <span class='texttt'>Range</span> and dispatching to the overload that takes separate
 iterator and sentinel arguments.</p></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><p >Some algorithms declare both an overload that takes a <span class='texttt'>Range</span>
 and an <span class='texttt'>Iterator</span>, and an overload that takes two <span class='texttt'>Range</span>
-parameters. Since an array type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>) both satisfies
-<span class='texttt'>Range</span> and decays to a pointer (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> conv.array <span class='endcsname'></span>) which satisfies
+parameters. Since an array type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>) both satisfies
+<span class='texttt'>Range</span> and decays to a pointer (  ISO/IEC 14882:2014 &sect;<a href='../n4140/conv.array'>[conv.array]</a>) which satisfies
 <span class='texttt'>Iterator</span>, such overloads are ambiguous when an array is passed as
 the second argument. Implementations provide a mechanism to resolve
 this ambiguity in favor of the overload that takes two ranges.</p></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><p >The number and order of template parameters for algorithm declarations
 is unspecified, except where explicitly stated otherwise.</p></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><p >Despite that the algorithm declarations nominally accept parameters
 by value, it is unspecified when and if the argument expressions are used to
 initialize the actual parameters except that any such initialization shall be
-sequenced before (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> intro.execution <span class='endcsname'></span>) the algorithm returns.
+sequenced before (  ISO/IEC 14882:2014 &sect;<a href='../n4140/intro.execution'>[intro.execution]</a>) the algorithm returns.
 [&nbsp;<i>Note:</i> The behavior of a program that modifies the values of the actual
 argument expressions is consequently undefined unless the algorithm return
-happens before (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> intro.multithread <span class='endcsname'></span>) any such modifications. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-4'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-4'>4)</a></div><p >The decision whether to include a copying version was
+happens before (  ISO/IEC 14882:2014 &sect;<a href='../n4140/intro.multithread'>[intro.multithread]</a>) any such modifications. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-4'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-4'>4)</a></div><p >The decision whether to include a copying version was
 usually based on complexity considerations. When the cost of doing the operation
 dominates the cost of copy, the copying version is not included. For example,
 <span class='texttt'>sort_copy</span> is not included because the cost of sorting is much more
