--- a/ranges-ts/algorithms.html
+++ b/ranges-ts/algorithms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='en'><head><title>[algorithms]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='algorithms'><h1 ><a class='secnum' style='min-width:73pt'>10</a> Algorithms library <a class='abbr_ref' href='./#algorithms'>[algorithms]</a></h1><div id='general'><h2 ><a class='secnum' href='#general' style='min-width:88pt'>10.1</a> General <a class='abbr_ref' href='algorithms.general'>[algorithms.general]</a></h2><div class='para' id='general-1'><div class='marginalizedparent'><a class='marginalized' href='#general-1'>1</a></div><p >This Clause describes components that C++ programs may use to perform
-algorithmic operations on containers (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>) and other sequences.</p></div><div class='para' id='general-2'><div class='marginalizedparent'><a class='marginalized' href='#general-2'>2</a></div><p >The following subclauses describe components for
+algorithmic operations on containers (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>) and other sequences.</p></div><div class='para' id='general-2'><div class='marginalizedparent'><a class='marginalized' href='#general-2'>2</a></div><p >The following subclauses describe components for
 non-modifying sequence operations,
 modifying sequence operations,
 and sorting and related operations,
@@ -1000,7 +1000,7 @@ suffix <span class='texttt'>_if</span> (which follows the suffix <span class='te
 Unless otherwise specified, algorithms that take function objects as arguments
 are permitted to copy those function objects freely. Programmers for whom object
 identity is important should consider using a wrapper class that points to a
-noncopied implementation object such as <span class='texttt'>reference_wrapper&lt;T&gt;</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> refwrap <span class='endcsname'></span>), or some equivalent solution.
+noncopied implementation object such as <span class='texttt'>reference_wrapper&lt;T&gt;</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/refwrap'>[refwrap]</a>), or some equivalent solution.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='general-7'><div class='marginalizedparent'><a class='marginalized' href='#general-7'>7</a></div><p >In the description of the algorithms operators
 <span class='texttt'>+</span>
 and
@@ -1029,18 +1029,18 @@ behave as if they are implemented by calling <span class='texttt'>begin</span> a
 the <span class='texttt'>Range</span> and dispatching to the overload that takes separate
 iterator and sentinel arguments.</p></div><div class='para' id='general-10'><div class='marginalizedparent'><a class='marginalized' href='#general-10'>10</a></div><p >Some algorithms declare both an overload that takes a <span class='texttt'>Range</span>
 and an <span class='texttt'>Iterator</span>, and an overload that takes two <span class='texttt'>Range</span>
-parameters. Since an array type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>) both satisfies
-<span class='texttt'>Range</span> and decays to a pointer (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> conv.array <span class='endcsname'></span>) which satisfies
+parameters. Since an array type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>) both satisfies
+<span class='texttt'>Range</span> and decays to a pointer (  ISO/IEC 14882:2014 &sect;<a href='../n4140/conv.array'>[conv.array]</a>) which satisfies
 <span class='texttt'>Iterator</span>, such overloads are ambiguous when an array is passed as
 the second argument. Implementations provide a mechanism to resolve
 this ambiguity in favor of the overload that takes two ranges.</p></div><div class='para' id='general-11'><div class='marginalizedparent'><a class='marginalized' href='#general-11'>11</a></div><p >The number and order of template parameters for algorithm declarations
 is unspecified, except where explicitly stated otherwise.</p></div><div class='para' id='general-12'><div class='marginalizedparent'><a class='marginalized' href='#general-12'>12</a></div><p >Despite that the algorithm declarations nominally accept parameters
 by value, it is unspecified when and if the argument expressions are used to
 initialize the actual parameters except that any such initialization shall be
-sequenced before (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> intro.execution <span class='endcsname'></span>) the algorithm returns.
+sequenced before (  ISO/IEC 14882:2014 &sect;<a href='../n4140/intro.execution'>[intro.execution]</a>) the algorithm returns.
 [&nbsp;<i>Note:</i> The behavior of a program that modifies the values of the actual
 argument expressions is consequently undefined unless the algorithm return
-happens before (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> intro.multithread <span class='endcsname'></span>) any such modifications. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-4'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-4'>4)</a></div><p >The decision whether to include a copying version was
+happens before (  ISO/IEC 14882:2014 &sect;<a href='../n4140/intro.multithread'>[intro.multithread]</a>) any such modifications. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-4'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-4'>4)</a></div><p >The decision whether to include a copying version was
 usually based on complexity considerations. When the cost of doing the operation
 dominates the cost of copy, the copying version is not included. For example,
 <span class='texttt'>sort_copy</span> is not included because the cost of sorting is much more
@@ -1505,7 +1505,7 @@ template &lt;InputRange Rng, WeaklyIncrementable O, class Proj = identity,
   tagged_pair&lt;tag::in(safe_iterator_t&lt;Rng&gt;), tag::out(O)&gt;
     copy_if(Rng&amp;&amp; rng, O result, Pred pred, Proj proj = Proj{});
 </code></p><div class='itemdescr'></div><div class='para' id='alg.copy-8'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-8'>8</a></div><div class='itemdescr'><p ><i>Requires:</i> The ranges <span class='texttt'>[first,last)</span> and <span class='texttt'>[result,result + (last - first))</span> shall not overlap.</p></div></div><div class='para' id='alg.copy-9'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-9'>9</a></div><div class='itemdescr'><p ><i>Effects:</i> Copies all of the elements referred to by the iterator <span class='texttt'>i</span> in the range <span class='texttt'>[first,last)</span>
-for which <span class='texttt'>invoke(pred, invoke(proj, *i))</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='alg.copy-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-10'>10</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>{last, result + (last - first)}</span>.</p></div></div><div class='para' id='alg.copy-11'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-11'>11</a></div><div class='itemdescr'><p ><i>Complexity:</i> Exactly <span class='texttt'>last - first</span> applications of the corresponding predicate and projection.</p></div></div><div class='para' id='alg.copy-12'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-12'>12</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+for which <span class='texttt'>invoke(pred, invoke(proj, *i))</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='alg.copy-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-10'>10</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>{last, result + (last - first)}</span>.</p></div></div><div class='para' id='alg.copy-11'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-11'>11</a></div><div class='itemdescr'><p ><i>Complexity:</i> Exactly <span class='texttt'>last - first</span> applications of the corresponding predicate and projection.</p></div></div><div class='para' id='alg.copy-12'><div class='marginalizedparent'><a class='marginalized' href='#alg.copy-12'>12</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='copy_backward'></a></span><code class='itemdecl'>
 template &lt;BidirectionalIterator I1, Sentinel&lt;I1&gt; S1, BidirectionalIterator I2&gt;
   requires IndirectlyCopyable&lt;I1, I2&gt;()
@@ -1835,7 +1835,7 @@ in the range <span class='texttt'>[first,last)</span>
 for which the following corresponding conditions hold:
 <span class='texttt'>invoke(proj, *i) == value</span>,
 <span class='texttt'>invoke(pred, invoke(proj, *i)) != false</span>.</p></div></div><div class='para' id='alg.remove-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
-The end of the resulting range.</p></div></div><div class='para' id='alg.remove-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).</p></div></div><div class='para' id='alg.remove-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
+The end of the resulting range.</p></div></div><div class='para' id='alg.remove-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).</p></div></div><div class='para' id='alg.remove-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Exactly
 <span class='texttt'>last - first</span>
 applications of the corresponding predicate and projection.</p></div></div><div class='para' id='alg.remove-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-5'>5</a></div><div class='itemdescr'><p ><i>Note:</i> each element in the range <span class='texttt'>[ret,last)</span>, where <span class='texttt'>ret</span> is
@@ -1883,7 +1883,7 @@ for which the following corresponding conditions do not hold:
 A pair consisting of <span class='texttt'>last</span> and the end of the resulting range.</p></div></div><div class='para' id='alg.remove-9'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-9'>9</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 Exactly
 <span class='texttt'>last - first</span>
-applications of the corresponding predicate and projection.</p></div></div><div class='para' id='alg.remove-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+applications of the corresponding predicate and projection.</p></div></div><div class='para' id='alg.remove-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.remove-10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div><div id='alg.unique'><h3 ><a class='secnum' href='#alg.unique' style='min-width:103pt'>10.4.9</a> Unique <a class='abbr_ref' href='alg.unique'>[alg.unique]</a></h3><p ><span class='indexparent'><a class='index' id='unique'></a></span><code class='itemdecl'>
 template &lt;ForwardIterator I, Sentinel&lt;I&gt; S, class Proj = identity,
     IndirectRelation&lt;projected&lt;I, Proj&gt;&gt; R = equal_to&lt;&gt;&gt;
@@ -2173,9 +2173,9 @@ there shall be an iterator <span class='texttt'>mid</span> such that
 are both true.</p></div></div><div class='para' id='alg.partitions-14'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-14'>14</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>mid</span> such that <span class='texttt'>all_of(first, mid, pred, proj)</span> and
 <span class='texttt'>none_of(mid, last, pred, proj)</span> are both true.</p></div></div><div class='para' id='alg.partitions-15'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-15'>15</a></div><div class='itemdescr'><p ><i>Complexity:</i> <span class='math'>Ο(<span class='math'><span class='mathalpha'>log</span>(<span class='mathalpha'>last</span> - <span class='mathalpha'>first</span>)</span>)</span> applications of <span class='texttt'>pred</span> and <span class='texttt'>proj</span>.
 </p></div></div></div></div><div id='alg.sorting'><h2 ><a class='secnum' href='#alg.sorting' style='min-width:88pt'>10.5</a> Sorting and related operations <a class='abbr_ref' href='alg.sorting'>[alg.sorting]</a></h2><div class='para' id='alg.sorting-1'><div class='marginalizedparent'><a class='marginalized' href='#alg.sorting-1'>1</a></div><p >All the operations in <a href='alg.sorting'>[alg.sorting]</a> take an optional binary callable predicate of type <span class='texttt'>Comp</span> that defaults to <span class='texttt'>less&lt;&gt;</span>.</p></div><div class='para' id='alg.sorting-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.sorting-2'>2</a></div><p ><span class='texttt'>Comp</span>
-is a callable object (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> func.require <span class='endcsname'></span>). The return value of the <span class='texttt'>invoke</span> operation applied to
+is a callable object (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>). The return value of the <span class='texttt'>invoke</span> operation applied to
 an object of type <span class='texttt'>Comp</span>, when contextually converted to
-<span class='texttt'>bool</span> (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> conv <span class='endcsname'></span>),
+<span class='texttt'>bool</span> (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/conv'>[conv]</a>),
 yields <span class='texttt'>true</span> if the first argument of the call
 is less than the second, and
 <span class='texttt'>false</span>
@@ -2247,7 +2247,7 @@ It does at most <span class='math'><span class='mathalpha'>N</span> <span class=
 (where
 <span class='texttt'><span class='math'><span class='mathalpha'>N</span></span> == last - first</span>)
 comparisons; if enough extra memory is available, it is
-<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='stable.sort-3'><div class='marginalizedparent'><a class='marginalized' href='#stable.sort-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='stable.sort-3'><div class='marginalizedparent'><a class='marginalized' href='#stable.sort-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div><div id='partial.sort'><h4 ><a class='secnum' href='#partial.sort' style='min-width:118pt'>10.5.1.3</a> <span class='texttt'>partial_sort</span> <a class='abbr_ref' href='partial.sort'>[partial.sort]</a></h4><p ><span class='indexparent'><a class='index' id='partial_sort'></a></span><code class='itemdecl'>
 template &lt;RandomAccessIterator I, Sentinel&lt;I&gt; S, class Comp = less&lt;&gt;,
     class Proj = identity&gt;
@@ -2525,7 +2525,7 @@ The resulting range shall not overlap with either of the original ranges.</p></d
 <span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result_last)</span>.</p></div></div><div class='para' id='alg.merge-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>(last1 - first1) + (last2 - first2) - 1</span>
-applications of the comparison function and each projection.</p></div></div><div class='para' id='alg.merge-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+applications of the comparison function and each projection.</p></div></div><div class='para' id='alg.merge-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='inplace_merge'></a></span><code class='itemdecl'>
 template &lt;BidirectionalIterator I, Sentinel&lt;I&gt; S, class Comp = less&lt;&gt;,
     class Proj = identity&gt;
@@ -2566,10 +2566,10 @@ If no additional memory is available, an algorithm with complexity
 <span class='texttt'>N</span>
 is equal to
 <span class='texttt'>last - first</span>)
-may be used.</p></div></div><div class='para' id='alg.merge-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+may be used.</p></div></div><div class='para' id='alg.merge-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div><div id='alg.set.operations'><h3 ><a class='secnum' href='#alg.set.operations' style='min-width:103pt'>10.5.5</a> Set operations on sorted structures <a class='abbr_ref' href='alg.set.operations'>[alg.set.operations]</a></h3><div class='para' id='alg.set.operations-1'><div class='marginalizedparent'><a class='marginalized' href='#alg.set.operations-1'>1</a></div><p >This section defines all the basic set operations on sorted structures.
 They also work with
-<span class='texttt'>multiset</span>s (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> multiset <span class='endcsname'></span>)
+<span class='texttt'>multiset</span>s (  ISO/IEC 14882:2014 &sect;<a href='../n4140/multiset'>[multiset]</a>)
 containing multiple copies of equivalent elements.
 The semantics of the set operations are generalized to
 <span class='texttt'>multiset</span>s
