--- a/ranges-ts/concepts.lib.corelang.assignable.html
+++ b/ranges-ts/concepts.lib.corelang.assignable.html
@@ -14,6 +14,6 @@ Let <span class='texttt'>uu</span> be a distinct object of type <span class='tex
 Then <span class='texttt'>Assignable&lt;T, U&gt;()</span> is satisfied if and only if</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>addressof(t = v) == addressof(t)</span>.
 </p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p >After evaluating <span class='texttt'>t = v</span>, <span class='texttt'>t</span> is equal to <span class='texttt'>uu</span> and:
 </p><ul class='itemize'><li id='1.2.1'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#1.2.1'>(1.2.1)</a></div><p >If <span class='texttt'>v</span> is a non-<span class='texttt'>const</span> rvalue, its resulting
-state is valid but unspecified (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> lib.types.movedfrom <span class='endcsname'></span>).
+state is valid but unspecified (  ISO/IEC 14882:2014 &sect;<a href='../n4140/lib.types.movedfrom'>[lib.types.movedfrom]</a>).
 </p></li><li id='1.2.2'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#1.2.2'>(1.2.2)</a></div><p >Otherwise, <span class='texttt'>v</span> is not modified.
 </p></li></ul></li></ul></div></div></div></div></body></html>
