--- a/ranges-ts/concepts.lib.object.destructible.html
+++ b/ranges-ts/concepts.lib.object.destructible.html
@@ -17,6 +17,6 @@ the denoted object(s) are reclaimed.
 </p></li><li id='3.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.2'>(3.2)</a></div><p ><span class='texttt'>&amp;t == addressof(t)</span>.
 </p></li><li id='3.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.3'>(3.3)</a></div><p >The expression <span class='texttt'>&amp;t</span> is non-modifying.
 </p></li></ul></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> Unlike the <span class='texttt'>Destructible</span> library concept in the C++
-Standard (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> utility.arg.requirements <span class='endcsname'></span>), this concept forbids destructors
+Standard (  ISO/IEC 14882:2014 &sect;<a href='../n4140/utility.arg.requirements'>[utility.arg.requirements]</a>), this concept forbids destructors
 that are <span class='texttt'>noexcept(false)</span>, even if non-throwing. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div></div></body></html>
