--- a/ranges-ts/function.objects.html
+++ b/ranges-ts/function.objects.html
@@ -42,7 +42,7 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 </pre></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Any entities declared or defined directly in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;functional&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/functional&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   using std::reference_wrapper;
@@ -52,7 +52,7 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Any nested namespaces defined directly in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;functional&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/functional&gt;</span> are aliased with a
-<span class='grammarterm'>namespace-alias-definition</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.alias <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>namespace-alias-definition</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.alias'>[namespace.alias]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   namespace placeholders = std::placeholders;
@@ -61,9 +61,9 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 template &lt;class F, class... Args&gt;
 result_of_t&lt;F&amp;&amp;(Args&amp;&amp;...)&gt; invoke(F&amp;&amp; f, Args&amp;&amp;... args);
 </code>
-</p><div class='itemdescr'></div><div class='para' id='func.invoke-1'><div class='marginalizedparent'><a class='marginalized' href='#func.invoke-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to: <br/> <span class='texttt'>return <i>INVOKE</i>(std::forward&lt;F&gt;(f), std::forward&lt;Args&gt;(args)...);</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> func.require <span class='endcsname'></span>).
+</p><div class='itemdescr'></div><div class='para' id='func.invoke-1'><div class='marginalizedparent'><a class='marginalized' href='#func.invoke-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to: <br/> <span class='texttt'>return <i>INVOKE</i>(std::forward&lt;F&gt;(f), std::forward&lt;Args&gt;(args)...);</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>).
 </p></div></div></div><div id='comparisons'><h3 ><a class='secnum' href='#comparisons' style='min-width:103pt'>8.3.2</a> Comparisons <a class='abbr_ref' href='comparisons'>[comparisons]</a></h3><div class='para' id='comparisons-1'><div class='marginalizedparent'><a class='marginalized' href='#comparisons-1'>1</a></div><p >The library provides basic function object classes for all of the comparison
-operators in the language (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.rel <span class='endcsname'></span>,   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.eq <span class='endcsname'></span>).</p><p ><span class='indexparent'><a class='index' id='equal_to'></a></span><code class='itemdecl'>
+operators in the language (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.rel'>[expr.rel]</a>,   ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.eq'>[expr.eq]</a>).</p><p ><span class='indexparent'><a class='index' id='equal_to'></a></span><code class='itemdecl'>
 template &lt;class T = void&gt;
   requires EqualityComparable&lt;T&gt;() || Same&lt;T, void&gt;()
 struct equal_to {
