--- a/ranges-ts/iterator.range.end.html
+++ b/ranges-ts/iterator.range.end.html
@@ -5,7 +5,7 @@ object (<a href='customization.point.object'>[customization.point.object]</a>). 
   [&nbsp;<i>Note:</i> This deprecated usage exists so that
   <span class='texttt'>ranges::end(E)</span> behaves similarly to <span class='texttt'>std::end(E)</span>
   as defined in ISO/IEC 14882 when <span class='texttt'>E</span> is an rvalue. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(E) + extent&lt;T&gt;::value</span> if <span class='texttt'>E</span> has array
-  type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>) <span class='texttt'>T</span>.</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).end())</span> if it is a valid expression and its type <span class='texttt'>S</span> meets the
+  type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>) <span class='texttt'>T</span>.</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).end())</span> if it is a valid expression and its type <span class='texttt'>S</span> meets the
   syntactic requirements of
   <span class='texttt'>Sentinel&lt;S, decltype(ranges::begin(E))&gt;()</span>. If
   <span class='texttt'>Sentinel</span> is not satisfied, the program is ill-formed with
