--- a/ranges-ts/iterator.range.html
+++ b/ranges-ts/iterator.range.html
@@ -5,7 +5,7 @@
   [&nbsp;<i>Note:</i> This deprecated usage exists so that
   <span class='texttt'>ranges::begin(E)</span> behaves similarly to <span class='texttt'>std::begin(E)</span>
   as defined in ISO/IEC 14882 when <span class='texttt'>E</span> is an rvalue. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='begin-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#begin-1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(E) + 0</span> if <span class='texttt'>E</span> has array
-  type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>).</p></li><li id='begin-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#begin-1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).begin())</span> if it is a valid expression and its type <span class='texttt'>I</span> meets the
+  type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>).</p></li><li id='begin-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#begin-1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).begin())</span> if it is a valid expression and its type <span class='texttt'>I</span> meets the
   syntactic requirements of <span class='texttt'>Iterator&lt;I&gt;()</span>. If
   <span class='texttt'>Iterator</span> is not satisfied, the program is ill-formed
   with no diagnostic required.</p></li><li id='begin-1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#begin-1.4'>(1.4)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY(begin(E))</span> if it is a valid expression and its type <span class='texttt'>I</span> meets the
@@ -23,7 +23,7 @@ object (<a href='customization.point.object'>[customization.point.object]</a>). 
   [&nbsp;<i>Note:</i> This deprecated usage exists so that
   <span class='texttt'>ranges::end(E)</span> behaves similarly to <span class='texttt'>std::end(E)</span>
   as defined in ISO/IEC 14882 when <span class='texttt'>E</span> is an rvalue. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='end-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#end-1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(E) + extent&lt;T&gt;::value</span> if <span class='texttt'>E</span> has array
-  type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>) <span class='texttt'>T</span>.</p></li><li id='end-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#end-1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).end())</span> if it is a valid expression and its type <span class='texttt'>S</span> meets the
+  type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>) <span class='texttt'>T</span>.</p></li><li id='end-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#end-1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).end())</span> if it is a valid expression and its type <span class='texttt'>S</span> meets the
   syntactic requirements of
   <span class='texttt'>Sentinel&lt;S, decltype(ranges::begin(E))&gt;()</span>. If
   <span class='texttt'>Sentinel</span> is not satisfied, the program is ill-formed with
