--- a/ranges-ts/iterator.synopsis.html
+++ b/ranges-ts/iterator.synopsis.html
@@ -593,4 +593,4 @@ namespace std {
 </pre><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Any entities declared or defined in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;iterator&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/iterator&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>).</p></div></div></div></body></html>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>).</p></div></div></div></body></html>
