--- a/ranges-ts/iterators.general.html
+++ b/ranges-ts/iterators.general.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang='en'><head><title>[iterators.general]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>9</a> Iterators library <a class='abbr_ref' href='./#iterators'>[iterators]</a></h1><div id='iterators.general'><h2 ><a class='secnum' style='min-width:88pt'>9.1</a> General <a class='abbr_ref'>[iterators.general]</a></h2><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This Clause describes components that C++ programs may use to perform
-iterations over containers (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>),
-streams (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> iostream.format <span class='endcsname'></span>),
-stream buffers (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> stream.buffers <span class='endcsname'></span>),
+iterations over containers (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>),
+streams (  ISO/IEC 14882:2014 &sect;<a href='../n4140/iostream.format'>[iostream.format]</a>),
+stream buffers (  ISO/IEC 14882:2014 &sect;<a href='../n4140/stream.buffers'>[stream.buffers]</a>),
 and ranges (<a href='ranges'>[ranges]</a>).</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The following subclauses describe
 iterator requirements, and
 components for
