--- a/ranges-ts/meta.unary.prop.html
+++ b/ranges-ts/meta.unary.prop.html
@@ -5,7 +5,7 @@ Working Draft of C++17.]</span></p><div class='numberedTable' id='tab:type-trait
   <span class='added'><span class='texttt'>struct is_swappable_with;</span></span> </td><td class='left'>
   <span class='added'>The expressions <span class='texttt'>swap(declval&lt;T&gt;(),</span></span><span class='added'><span class='texttt'> declval&lt;U&gt;())</span>
   and <span class='texttt'>swap(</span></span><span class='added'><span class='texttt'>declval&lt;U&gt;(),</span></span><span class='added'><span class='texttt'> declval&lt;T&gt;())</span>
-  are each well-formed when treated as an unevaluated operand (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr <span class='endcsname'></span>)
+  are each well-formed when treated as an unevaluated operand (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/expr'>[expr]</a>)
   in an overload-resolution context for swappable
   values (<a href='concepts.lib.corelang.swappable'>[concepts.lib.corelang.swappable]</a>).
   Access checking is performed as if in a context unrelated to <span class='texttt'>T</span> and <span class='texttt'>U</span>.
@@ -31,7 +31,7 @@ Working Draft of C++17.]</span></p><div class='numberedTable' id='tab:type-trait
   <span class='added'><span class='texttt'>is_swappable_with_v&lt;T, </span></span><span class='added'><span class='texttt'>U&gt;</span> is <span class='texttt'>true</span> and
   each <span class='texttt'>swap</span> expression of the definition of
   <span class='texttt'>is_swappable_with&lt;T, U&gt;</span> is known not to throw
-  any exceptions (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.unary.noexcept <span class='endcsname'></span>).</span> </td><td class='left'>
+  any exceptions (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.unary.noexcept'>[expr.unary.noexcept]</a>).</span> </td><td class='left'>
   <span class='added'><span class='texttt'>T</span> and <span class='texttt'>U</span> shall be complete types,
   (possibly cv-qualified) <span class='texttt'>void</span>, or
   arrays of unknown bound.</span> </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_nothrow_swappable'></a></span><span class='texttt'><span class='added'>template &lt;class T&gt;</span></span><br/>
