--- a/ranges-ts/ranges.requirements.html
+++ b/ranges-ts/ranges.requirements.html
@@ -96,7 +96,7 @@ is, the cost of these operations is not proportional to the number of elements i
 the <span class='texttt'>View</span>.</p></div><div class='para' id='ranges.view-2'><div class='marginalizedparent'><a class='marginalized' href='#ranges.view-2'>2</a></div><p >[&nbsp;<i>Example:</i>
 Examples of <span class='texttt'>View</span>s are:</p><ul class='itemize'><li id='ranges.view-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-2.1'>(2.1)</a></div><p >A <span class='texttt'>Range</span> type that wraps a pair of iterators.</p></li><li id='ranges.view-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-2.2'>(2.2)</a></div><p >A <span class='texttt'>Range</span> type that holds its elements by <span class='texttt'>shared_ptr</span>
 and shares ownership with all its copies.</p></li><li id='ranges.view-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-2.3'>(2.3)</a></div><p >A <span class='texttt'>Range</span> type that generates its elements on demand.
-</p></li></ul><p >A container (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>) is not a <span class='texttt'>View</span> since copying the
+</p></li></ul><p >A container (  ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>) is not a <span class='texttt'>View</span> since copying the
 container copies the elements, which cannot be done in constant time.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p ><code class='itemdecl'>
 template &lt;class T&gt;
@@ -121,11 +121,11 @@ to derive from <span class='texttt'>true_type</span> or <span class='texttt'>fal
 </p><ul class='itemize'><li id='ranges.view-4.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-4.1'>(4.1)</a></div><p >If <span class='texttt'>enable_view&lt;T&gt;</span> has a member type <span class='texttt'>type</span>, <span class='texttt'>enable_view&lt;T&gt;::type::value</span>;
 </p></li><li id='ranges.view-4.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-4.2'>(4.2)</a></div><p >Otherwise, if <span class='texttt'>T</span> is derived from <span class='texttt'>view_base</span>, <span class='texttt'>true</span>;
 </p></li><li id='ranges.view-4.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-4.3'>(4.3)</a></div><p >Otherwise, if <span class='texttt'>T</span> is an instantiation of class template
-<span class='texttt'>initializer_list</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> support.initlist <span class='endcsname'></span>),
-<span class='texttt'>set</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> set <span class='endcsname'></span>),
-<span class='texttt'>multiset</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> multiset <span class='endcsname'></span>),
-<span class='texttt'>unordered_set</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> unord.set <span class='endcsname'></span>), or
-<span class='texttt'>unordered_multiset</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> unord.multiset <span class='endcsname'></span>), <span class='texttt'>false</span>;
+<span class='texttt'>initializer_list</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/support.initlist'>[support.initlist]</a>),
+<span class='texttt'>set</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/set'>[set]</a>),
+<span class='texttt'>multiset</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/multiset'>[multiset]</a>),
+<span class='texttt'>unordered_set</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/unord.set'>[unord.set]</a>), or
+<span class='texttt'>unordered_multiset</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/unord.multiset'>[unord.multiset]</a>), <span class='texttt'>false</span>;
 </p></li><li id='ranges.view-4.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-4.4'>(4.4)</a></div><p >Otherwise, if both <span class='texttt'>T</span> and <span class='texttt'>const T</span> satisfy <span class='texttt'>Range</span> and <span class='texttt'>reference_t</span>
 <span class='texttt'>&lt;iterator_t&lt;T&gt;&gt;</span> is not the same type as <span class='texttt'>reference_t</span>
 <span class='texttt'>&lt;iterator_t&lt;const T&gt;&gt;</span>,
@@ -134,7 +134,7 @@ implies reference semantics. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></li><li id='ranges.view-4.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-4.5'>(4.5)</a></div><p >Otherwise, <span class='texttt'>true</span>.
 </p></li></ul></div></div></div><div id='ranges.bounded'><h4 ><a class='secnum' href='#ranges.bounded' style='min-width:118pt'>9.9.2.5</a> Bounded ranges <a class='abbr_ref' href='ranges.bounded'>[ranges.bounded]</a></h4><div class='para' id='ranges.bounded-1'><div class='marginalizedparent'><a class='marginalized' href='#ranges.bounded-1'>1</a></div><p >The <span class='texttt'>BoundedRange</span> concept specifies requirements
 of an <span class='texttt'>Range</span> type for which <span class='texttt'>begin</span> and <span class='texttt'>end</span> return objects of
-the same type. [&nbsp;<i>Note:</i> The standard containers (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>)
+the same type. [&nbsp;<i>Note:</i> The standard containers (  ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>)
 satisfy <span class='texttt'>BoundedRange</span>.<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><pre class='codeblock'>
 template &lt;class T&gt;
 concept bool BoundedRange() {
