--- a/ranges-ts/res.on.functions.html
+++ b/ranges-ts/res.on.functions.html
@@ -2,6 +2,6 @@
 template components), the Ranges library depends on components supplied by a
 C++ program. If these components do not meet their requirements, this document
 places no requirements on the implementation.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >In particular, the effects are undefined if an incomplete
-type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.types <span class='endcsname'></span>) is used as a template argument when instantiating a
+type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.types'>[basic.types]</a>) is used as a template argument when instantiating a
 template component or evaluating a concept, unless specifically allowed for that
 component.</p></div></div></div></body></html>
