--- a/ranges-ts/stable.sort.html
+++ b/ranges-ts/stable.sort.html
@@ -14,5 +14,5 @@ It does at most <span class='math'><span class='mathalpha'>N</span> <span class=
 (where
 <span class='texttt'><span class='math'><span class='mathalpha'>N</span></span> == last - first</span>)
 comparisons; if enough extra memory is available, it is
-<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div></div></body></html>
