--- a/ranges-ts/structure.html
+++ b/ranges-ts/structure.html
@@ -29,7 +29,7 @@ well-defined expression requirements there is a named concept that
 specifies an initial set of the valid expressions and their semantics. Any generic
 algorithm (Clause <a href='algorithms'>[algorithms]</a>) that uses the well-defined expression requirements
 is described in terms of the valid expressions for its formal type parameters.</p></div><div class='para' id='requirements-4'><div class='marginalizedparent'><a class='marginalized' href='#requirements-4'>4</a></div><p >Template argument requirements are sometimes referenced by name.
-See   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> type.descriptions <span class='endcsname'></span>.</p></div><div class='para' id='requirements-5'><div class='marginalizedparent'><a class='marginalized' href='#requirements-5'>5</a></div><p >In some cases the semantic requirements are presented as C++ code.
+See   ISO/IEC 14882:2014 &sect;<a href='../n4140/type.descriptions'>[type.descriptions]</a>.</p></div><div class='para' id='requirements-5'><div class='marginalizedparent'><a class='marginalized' href='#requirements-5'>5</a></div><p >In some cases the semantic requirements are presented as C++ code.
 Such code is intended as a
 specification of equivalence of a construct to another construct, not
 necessarily as the way the construct
@@ -46,4 +46,4 @@ imposed on the use of the declaration.</p></div><div class='para' id='requiremen
 point of use, the program is ill-formed, no diagnostic required.</p></div><div class='footnote' id='footnote-2'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-2'>2)</a></div><p >Although in some cases the code given is
 unambiguously the optimum implementation.</p></div></div><div id='specifications'><h4 ><a class='secnum' href='#specifications' style='min-width:118pt'>6.2.1.4</a> Detailed specifications <a class='abbr_ref' href='structure.specifications'>[structure.specifications]</a></h4><div class='para' id='specifications-1'><div class='marginalizedparent'><a class='marginalized' href='#specifications-1'>1</a></div><p >The detailed specifications of each entity defined in
 Clauses <a href='concepts.lib'>[concepts.lib]</a>–<a href='numerics'>[numerics]</a> follows the conventions
-established by   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> structure.specifications <span class='endcsname'></span>.</p></div></div></div></div></body></html>
+established by   ISO/IEC 14882:2014 &sect;<a href='../n4140/structure.specifications'>[structure.specifications]</a>.</p></div></div></div></div></body></html>
