--- a/ranges-ts/structure.requirements.html
+++ b/ranges-ts/structure.requirements.html
@@ -13,7 +13,7 @@ well-defined expression requirements there is a named concept that
 specifies an initial set of the valid expressions and their semantics. Any generic
 algorithm (Clause <a href='algorithms'>[algorithms]</a>) that uses the well-defined expression requirements
 is described in terms of the valid expressions for its formal type parameters.</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >Template argument requirements are sometimes referenced by name.
-See   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> type.descriptions <span class='endcsname'></span>.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >In some cases the semantic requirements are presented as C++ code.
+See   ISO/IEC 14882:2014 &sect;<a href='../n4140/type.descriptions'>[type.descriptions]</a>.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >In some cases the semantic requirements are presented as C++ code.
 Such code is intended as a
 specification of equivalence of a construct to another construct, not
 necessarily as the way the construct
