--- a/ranges-ts/tagged.tuple.html
+++ b/ranges-ts/tagged.tuple.html
@@ -11,7 +11,7 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 </pre></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Any entities declared or defined in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;tuple&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/tuple&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   using std::tuple;
