--- a/ranges-ts/utilities.html
+++ b/ranges-ts/utilities.html
@@ -56,7 +56,7 @@ namespace std {
 </pre></div><div class='para' id='utility-3'><div class='marginalizedparent'><a class='marginalized' href='#utility-3'>3</a></div><p >Any entities declared or defined directly in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;utility&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges::v1</span> in header
 <span class='texttt'>&lt;experimental/ranges/utility&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   using std::pair;
@@ -77,7 +77,7 @@ and <span class='texttt'>E2</span> is equivalent to:</p><ul class='itemize'><li 
   If the function selected by overload resolution does not
   exchange the values referenced by <span class='texttt'>E1</span> and <span class='texttt'>E2</span>,
   the program is ill-formed with no diagnostic required.</p></li><li id='utility.swap-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#utility.swap-1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(void)swap_ranges(E1, E2)</span> if <span class='texttt'>E1</span> and
-  <span class='texttt'>E2</span> are lvalues of array types (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>)
+  <span class='texttt'>E2</span> are lvalues of array types (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>)
   of equal extent and <span class='texttt'>ranges::swap(*(E1), *(E2))</span>
   is a valid expression, except that
   <span class='texttt'>noexcept(ranges::swap(E1, E2))</span> is equal to
@@ -150,7 +150,7 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 </pre></div><div class='para' id='function.objects-2'><div class='marginalizedparent'><a class='marginalized' href='#function.objects-2'>2</a></div><p >Any entities declared or defined directly in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;functional&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/functional&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   using std::reference_wrapper;
@@ -160,7 +160,7 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='function.objects-3'><div class='marginalizedparent'><a class='marginalized' href='#function.objects-3'>3</a></div><p >Any nested namespaces defined directly in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;functional&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/functional&gt;</span> are aliased with a
-<span class='grammarterm'>namespace-alias-definition</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.alias <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>namespace-alias-definition</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.alias'>[namespace.alias]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   namespace placeholders = std::placeholders;
@@ -169,9 +169,9 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 template &lt;class F, class... Args&gt;
 result_of_t&lt;F&amp;&amp;(Args&amp;&amp;...)&gt; invoke(F&amp;&amp; f, Args&amp;&amp;... args);
 </code>
-</p><div class='itemdescr'></div><div class='para' id='func.invoke-1'><div class='marginalizedparent'><a class='marginalized' href='#func.invoke-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to: <br/> <span class='texttt'>return <i>INVOKE</i>(std::forward&lt;F&gt;(f), std::forward&lt;Args&gt;(args)...);</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> func.require <span class='endcsname'></span>).
+</p><div class='itemdescr'></div><div class='para' id='func.invoke-1'><div class='marginalizedparent'><a class='marginalized' href='#func.invoke-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Equivalent to: <br/> <span class='texttt'>return <i>INVOKE</i>(std::forward&lt;F&gt;(f), std::forward&lt;Args&gt;(args)...);</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>).
 </p></div></div></div><div id='comparisons'><h3 ><a class='secnum' href='#comparisons' style='min-width:103pt'>8.3.2</a> Comparisons <a class='abbr_ref' href='comparisons'>[comparisons]</a></h3><div class='para' id='comparisons-1'><div class='marginalizedparent'><a class='marginalized' href='#comparisons-1'>1</a></div><p >The library provides basic function object classes for all of the comparison
-operators in the language (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.rel <span class='endcsname'></span>,   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.eq <span class='endcsname'></span>).</p><p ><span class='indexparent'><a class='index' id='equal_to'></a></span><code class='itemdecl'>
+operators in the language (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.rel'>[expr.rel]</a>,   ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.eq'>[expr.eq]</a>).</p><p ><span class='indexparent'><a class='index' id='equal_to'></a></span><code class='itemdecl'>
 template &lt;class T = void&gt;
   requires EqualityComparable&lt;T&gt;() || Same&lt;T, void&gt;()
 struct equal_to {
@@ -283,7 +283,7 @@ struct identity {
 
   typedef <i><span class='texttt'>unspecified</span></i> is_transparent;
 };
-</code></p><div class='itemdescr'></div><div class='para' id='func.identity-1'><div class='marginalizedparent'><a class='marginalized' href='#func.identity-1'>1</a></div><div class='itemdescr'><p ><span class='texttt'>operator()</span> returns <span class='texttt'>std::forward&lt;T&gt;(t)</span>.</p></div></div></div></div><div id='meta'><h2 ><a class='secnum' href='#meta' style='min-width:88pt'>8.4</a> Metaprogramming and type traits <a class='abbr_ref' href='meta'>[meta]</a></h2><div id='meta.type.synop'><h3 ><a class='secnum' href='#meta.type.synop' style='min-width:103pt'>8.4.1</a> Header <span class='texttt'>&lt;type_traits&gt;</span> synopsis <a class='abbr_ref' href='meta.type.synop'>[meta.type.synop]</a></h3><p ><span class='enote'>[Editor's note: Change the <span class='texttt'>&lt;type_traits&gt;</span> synopsis (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> meta.type.synop <span class='endcsname'></span>) as
+</code></p><div class='itemdescr'></div><div class='para' id='func.identity-1'><div class='marginalizedparent'><a class='marginalized' href='#func.identity-1'>1</a></div><div class='itemdescr'><p ><span class='texttt'>operator()</span> returns <span class='texttt'>std::forward&lt;T&gt;(t)</span>.</p></div></div></div></div><div id='meta'><h2 ><a class='secnum' href='#meta' style='min-width:88pt'>8.4</a> Metaprogramming and type traits <a class='abbr_ref' href='meta'>[meta]</a></h2><div id='meta.type.synop'><h3 ><a class='secnum' href='#meta.type.synop' style='min-width:103pt'>8.4.1</a> Header <span class='texttt'>&lt;type_traits&gt;</span> synopsis <a class='abbr_ref' href='meta.type.synop'>[meta.type.synop]</a></h3><p ><span class='enote'>[Editor's note: Change the <span class='texttt'>&lt;type_traits&gt;</span> synopsis (  ISO/IEC 14882:2014 &sect;<a href='../n4140/meta.type.synop'>[meta.type.synop]</a>) as
 follows. Note: this change is intended to be made in <span class='texttt'>namespace std</span>.]</span></p><pre class='codeblock'>
 namespace std {
   [...]
@@ -340,7 +340,7 @@ Working Draft of C++17.]</span></p><div class='numberedTable' id='tab:type-trait
   <span class='added'><span class='texttt'>struct is_swappable_with;</span></span> </td><td class='left'>
   <span class='added'>The expressions <span class='texttt'>swap(declval&lt;T&gt;(),</span></span><span class='added'><span class='texttt'> declval&lt;U&gt;())</span>
   and <span class='texttt'>swap(</span></span><span class='added'><span class='texttt'>declval&lt;U&gt;(),</span></span><span class='added'><span class='texttt'> declval&lt;T&gt;())</span>
-  are each well-formed when treated as an unevaluated operand (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr <span class='endcsname'></span>)
+  are each well-formed when treated as an unevaluated operand (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/expr'>[expr]</a>)
   in an overload-resolution context for swappable
   values (<a href='concepts.lib.corelang.swappable'>[concepts.lib.corelang.swappable]</a>).
   Access checking is performed as if in a context unrelated to <span class='texttt'>T</span> and <span class='texttt'>U</span>.
@@ -366,7 +366,7 @@ Working Draft of C++17.]</span></p><div class='numberedTable' id='tab:type-trait
   <span class='added'><span class='texttt'>is_swappable_with_v&lt;T, </span></span><span class='added'><span class='texttt'>U&gt;</span> is <span class='texttt'>true</span> and
   each <span class='texttt'>swap</span> expression of the definition of
   <span class='texttt'>is_swappable_with&lt;T, U&gt;</span> is known not to throw
-  any exceptions (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.unary.noexcept <span class='endcsname'></span>).</span> </td><td class='left'>
+  any exceptions (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.unary.noexcept'>[expr.unary.noexcept]</a>).</span> </td><td class='left'>
   <span class='added'><span class='texttt'>T</span> and <span class='texttt'>U</span> shall be complete types,
   (possibly cv-qualified) <span class='texttt'>void</span>, or
   arrays of unknown bound.</span> </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_nothrow_swappable'></a></span><span class='texttt'><span class='added'>template &lt;class T&gt;</span></span><br/>
@@ -496,8 +496,8 @@ types, the member <span class='texttt'>type</span> shall be either defined or no
 </p></li><li id='meta.trans.other-3.4.2'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#meta.trans.other-3.4.2'>(3.4.2)</a></div><p ><span class='added'>Otherwise, there shall be no member <span class='texttt'>type</span>.</span>
 </p></li></ul></li></ul></div></div></div><div id='taggedtup'><h2 ><a class='secnum' href='#taggedtup' style='min-width:88pt'>8.5</a> Tagged tuple-like types <a class='abbr_ref' href='taggedtup'>[taggedtup]</a></h2><div id='taggedtup.general'><h3 ><a class='secnum' href='#taggedtup.general' style='min-width:103pt'>8.5.1</a> In general <a class='abbr_ref' href='taggedtup.general'>[taggedtup.general]</a></h3><div class='para' id='taggedtup.general-1'><div class='marginalizedparent'><a class='marginalized' href='#taggedtup.general-1'>1</a></div><p >The library provides a template for augmenting a tuple-like type with named element accessor
 member functions. The library also provides several templates that provide access to <span class='texttt'>tagged</span>
-objects as if they were <span class='texttt'>tuple</span> objects (see   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> tuple.elem <span class='endcsname'></span>).</p></div></div><div id='taggedtup.tagged'><h3 ><a class='secnum' href='#taggedtup.tagged' style='min-width:103pt'>8.5.2</a> Class template <span class='texttt'>tagged</span> <a class='abbr_ref' href='taggedtup.tagged'>[taggedtup.tagged]</a></h3><div class='para' id='taggedtup.tagged-1'><div class='marginalizedparent'><a class='marginalized' href='#taggedtup.tagged-1'>1</a></div><p >Class template <span class='texttt'>tagged</span> augments a tuple-like class type (e.g., <span class='texttt'>pair</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> pairs <span class='endcsname'></span>),
-<span class='texttt'>tuple</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> tuple <span class='endcsname'></span>)) by giving it named accessors. It is used to define the alias
+objects as if they were <span class='texttt'>tuple</span> objects (see   ISO/IEC 14882:2014 &sect;<a href='../n4140/tuple.elem'>[tuple.elem]</a>).</p></div></div><div id='taggedtup.tagged'><h3 ><a class='secnum' href='#taggedtup.tagged' style='min-width:103pt'>8.5.2</a> Class template <span class='texttt'>tagged</span> <a class='abbr_ref' href='taggedtup.tagged'>[taggedtup.tagged]</a></h3><div class='para' id='taggedtup.tagged-1'><div class='marginalizedparent'><a class='marginalized' href='#taggedtup.tagged-1'>1</a></div><p >Class template <span class='texttt'>tagged</span> augments a tuple-like class type (e.g., <span class='texttt'>pair</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/pairs'>[pairs]</a>),
+<span class='texttt'>tuple</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/tuple'>[tuple]</a>)) by giving it named accessors. It is used to define the alias
 templates <span class='texttt'>tagged_pair</span> (<a href='tagged.pairs'>[tagged.pairs]</a>) and
 <span class='texttt'>tagged_tuple</span> (<a href='tagged.tuple'>[tagged.tuple]</a>).</p></div><div class='para' id='taggedtup.tagged-2'><div class='marginalizedparent'><a class='marginalized' href='#taggedtup.tagged-2'>2</a></div><p >In the class synopsis below, let <span class='math'><span class='mathalpha'>i</span></span> be in the range
 <span class='texttt'>[0,sizeof...(Tags))</span> and <span class='math'><span class='mathalpha'>T</span><sub ><span class='mathalpha'>i</span></sub></span> be the <span class='math'><span class='mathalpha'>i</span><sup ><span class='mathalpha'>th</span></sup></span> type in <span class='texttt'>Tags</span>, where indexing
@@ -673,7 +673,7 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 </pre></div><div class='para' id='tagged.tuple-2'><div class='marginalizedparent'><a class='marginalized' href='#tagged.tuple-2'>2</a></div><p >Any entities declared or defined in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;tuple&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges</span> in header
 <span class='texttt'>&lt;experimental/ranges/tuple&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   using std::tuple;
