--- a/ranges-ts/utility.html
+++ b/ranges-ts/utility.html
@@ -47,7 +47,7 @@ namespace std {
 </pre></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Any entities declared or defined directly in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;utility&gt;</span>
 that are not already defined in namespace <span class='texttt'>std::experimental::ranges::v1</span> in header
 <span class='texttt'>&lt;experimental/ranges/utility&gt;</span> are imported with
-<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> namespace.udecl <span class='endcsname'></span>). [&nbsp;<i>Example:</i>
+<span class='grammarterm'>using-declarations</span> (  ISO/IEC 14882:2014 &sect;<a href='../n4140/namespace.udecl'>[namespace.udecl]</a>). [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace std { namespace experimental { namespace ranges { inline namespace v1 {
   using std::pair;
@@ -68,7 +68,7 @@ and <span class='texttt'>E2</span> is equivalent to:</p><ul class='itemize'><li 
   If the function selected by overload resolution does not
   exchange the values referenced by <span class='texttt'>E1</span> and <span class='texttt'>E2</span>,
   the program is ill-formed with no diagnostic required.</p></li><li id='swap-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#swap-1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(void)swap_ranges(E1, E2)</span> if <span class='texttt'>E1</span> and
-  <span class='texttt'>E2</span> are lvalues of array types (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>)
+  <span class='texttt'>E2</span> are lvalues of array types (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>)
   of equal extent and <span class='texttt'>ranges::swap(*(E1), *(E2))</span>
   is a valid expression, except that
   <span class='texttt'>noexcept(ranges::swap(E1, E2))</span> is equal to
