--- a/ranges-ts/utility.swap.html
+++ b/ranges-ts/utility.swap.html
@@ -12,7 +12,7 @@ and <span class='texttt'>E2</span> is equivalent to:</p><ul class='itemize'><li 
   If the function selected by overload resolution does not
   exchange the values referenced by <span class='texttt'>E1</span> and <span class='texttt'>E2</span>,
   the program is ill-formed with no diagnostic required.</p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(void)swap_ranges(E1, E2)</span> if <span class='texttt'>E1</span> and
-  <span class='texttt'>E2</span> are lvalues of array types (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>)
+  <span class='texttt'>E2</span> are lvalues of array types (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>)
   of equal extent and <span class='texttt'>ranges::swap(*(E1), *(E2))</span>
   is a valid expression, except that
   <span class='texttt'>noexcept(ranges::swap(E1, E2))</span> is equal to
