--- a/ranges-ts/alg.sorting.html
+++ b/ranges-ts/alg.sorting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang='en'><head><title>[alg.sorting]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>10</a> Algorithms library <a class='abbr_ref' href='./#algorithms'>[algorithms]</a></h1><div id='alg.sorting'><h2 ><a class='secnum' style='min-width:88pt'>10.5</a> Sorting and related operations <a class='abbr_ref'>[alg.sorting]</a></h2><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >All the operations in <a href='alg.sorting'>[alg.sorting]</a> take an optional binary callable predicate of type <span class='texttt'>Comp</span> that defaults to <span class='texttt'>less&lt;&gt;</span>.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p ><span class='texttt'>Comp</span>
-is a callable object (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> func.require <span class='endcsname'></span>). The return value of the <span class='texttt'>invoke</span> operation applied to
+is a callable object (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>). The return value of the <span class='texttt'>invoke</span> operation applied to
 an object of type <span class='texttt'>Comp</span>, when contextually converted to
-<span class='texttt'>bool</span> (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> conv <span class='endcsname'></span>),
+<span class='texttt'>bool</span> (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/conv'>[conv]</a>),
 yields <span class='texttt'>true</span> if the first argument of the call
 is less than the second, and
 <span class='texttt'>false</span>
@@ -73,7 +73,7 @@ It does at most <span class='math'><span class='mathalpha'>N</span> <span class=
 (where
 <span class='texttt'><span class='math'><span class='mathalpha'>N</span></span> == last - first</span>)
 comparisons; if enough extra memory is available, it is
-<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='stable.sort-3'><div class='marginalizedparent'><a class='marginalized' href='#stable.sort-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+<span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>.</p></div></div><div class='para' id='stable.sort-3'><div class='marginalizedparent'><a class='marginalized' href='#stable.sort-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div><div id='partial.sort'><h4 ><a class='secnum' href='#partial.sort' style='min-width:118pt'>10.5.1.3</a> <span class='texttt'>partial_sort</span> <a class='abbr_ref' href='partial.sort'>[partial.sort]</a></h4><p ><span class='indexparent'><a class='index' id='partial_sort'></a></span><code class='itemdecl'>
 template &lt;RandomAccessIterator I, Sentinel&lt;I&gt; S, class Comp = less&lt;&gt;,
     class Proj = identity&gt;
@@ -351,7 +351,7 @@ The resulting range shall not overlap with either of the original ranges.</p></d
 <span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result_last)</span>.</p></div></div><div class='para' id='alg.merge-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>(last1 - first1) + (last2 - first2) - 1</span>
-applications of the comparison function and each projection.</p></div></div><div class='para' id='alg.merge-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+applications of the comparison function and each projection.</p></div></div><div class='para' id='alg.merge-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='inplace_merge'></a></span><code class='itemdecl'>
 template &lt;BidirectionalIterator I, Sentinel&lt;I&gt; S, class Comp = less&lt;&gt;,
     class Proj = identity&gt;
@@ -392,10 +392,10 @@ If no additional memory is available, an algorithm with complexity
 <span class='texttt'>N</span>
 is equal to
 <span class='texttt'>last - first</span>)
-may be used.</p></div></div><div class='para' id='alg.merge-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> algorithm.stable <span class='endcsname'></span>).
+may be used.</p></div></div><div class='para' id='alg.merge-10'><div class='marginalizedparent'><a class='marginalized' href='#alg.merge-10'>10</a></div><div class='itemdescr'><p ><i>Remarks:</i> Stable (  ISO/IEC 14882:2014 &sect;<a href='../n4140/algorithm.stable'>[algorithm.stable]</a>).
 </p></div></div></div><div id='alg.set.operations'><h3 ><a class='secnum' href='#alg.set.operations' style='min-width:103pt'>10.5.5</a> Set operations on sorted structures <a class='abbr_ref' href='alg.set.operations'>[alg.set.operations]</a></h3><div class='para' id='alg.set.operations-1'><div class='marginalizedparent'><a class='marginalized' href='#alg.set.operations-1'>1</a></div><p >This section defines all the basic set operations on sorted structures.
 They also work with
-<span class='texttt'>multiset</span>s (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> multiset <span class='endcsname'></span>)
+<span class='texttt'>multiset</span>s (  ISO/IEC 14882:2014 &sect;<a href='../n4140/multiset'>[multiset]</a>)
 containing multiple copies of equivalent elements.
 The semantics of the set operations are generalized to
 <span class='texttt'>multiset</span>s
