--- a/ranges-ts/concepts.lib.corelang.html
+++ b/ranges-ts/concepts.lib.corelang.html
@@ -89,7 +89,7 @@ concept bool SignedIntegral() {
   return Integral&lt;T&gt;() &amp;&amp; is_signed&lt;T&gt;::value;
 }
 </code></p><div class='itemdescr'></div><div class='para' id='signedintegral-1'><div class='marginalizedparent'><a class='marginalized' href='#signedintegral-1'>1</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> <span class='texttt'>SignedIntegral&lt;T&gt;()</span> may be satisfied even for
-types that are not signed integral types (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.fundamental <span class='endcsname'></span>);
+types that are not signed integral types (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.fundamental'>[basic.fundamental]</a>);
 for example, <span class='texttt'>char</span>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div><div id='unsignedintegral'><h3 ><a class='secnum' href='#unsignedintegral' style='min-width:103pt'>7.3.9</a> Concept <span class='texttt'>UnsignedIntegral</span> <a class='abbr_ref' href='concepts.lib.corelang.unsignedintegral'>[concepts.lib.corelang.unsignedintegral]</a></h3><p ><span class='indexparent'><a class='index' id='UnsignedIntegral'></a></span><code class='itemdecl'>
@@ -98,7 +98,7 @@ concept bool UnsignedIntegral() {
   return Integral&lt;T&gt;() &amp;&amp; !SignedIntegral&lt;T&gt;();
 }
 </code></p><div class='itemdescr'></div><div class='para' id='unsignedintegral-1'><div class='marginalizedparent'><a class='marginalized' href='#unsignedintegral-1'>1</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> <span class='texttt'>UnsignedIntegral&lt;T&gt;()</span> may be satisfied even for
-types that are not unsigned integral types (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.fundamental <span class='endcsname'></span>);
+types that are not unsigned integral types (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.fundamental'>[basic.fundamental]</a>);
 for example, <span class='texttt'>char</span>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div><div id='assignable'><h3 ><a class='secnum' href='#assignable' style='min-width:103pt'>7.3.10</a> Concept <span class='texttt'>Assignable</span> <a class='abbr_ref' href='concepts.lib.corelang.assignable'>[concepts.lib.corelang.assignable]</a></h3><p ><span class='indexparent'><a class='index' id='Assignable'></a></span><code class='itemdecl'>
@@ -117,7 +117,7 @@ Let <span class='texttt'>uu</span> be a distinct object of type <span class='tex
 Then <span class='texttt'>Assignable&lt;T, U&gt;()</span> is satisfied if and only if</p><ul class='itemize'><li id='assignable-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#assignable-1.1'>(1.1)</a></div><p ><span class='texttt'>addressof(t = v) == addressof(t)</span>.
 </p></li><li id='assignable-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#assignable-1.2'>(1.2)</a></div><p >After evaluating <span class='texttt'>t = v</span>, <span class='texttt'>t</span> is equal to <span class='texttt'>uu</span> and:
 </p><ul class='itemize'><li id='assignable-1.2.1'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#assignable-1.2.1'>(1.2.1)</a></div><p >If <span class='texttt'>v</span> is a non-<span class='texttt'>const</span> rvalue, its resulting
-state is valid but unspecified (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> lib.types.movedfrom <span class='endcsname'></span>).
+state is valid but unspecified (  ISO/IEC 14882:2014 &sect;<a href='../n4140/lib.types.movedfrom'>[lib.types.movedfrom]</a>).
 </p></li><li id='assignable-1.2.2'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#assignable-1.2.2'>(1.2.2)</a></div><p >Otherwise, <span class='texttt'>v</span> is not modified.
 </p></li></ul></li></ul></div></div></div><div id='swappable'><h3 ><a class='secnum' href='#swappable' style='min-width:103pt'>7.3.11</a> Concept <span class='texttt'>Swappable</span> <a class='abbr_ref' href='concepts.lib.corelang.swappable'>[concepts.lib.corelang.swappable]</a></h3><p ><span class='indexparent'><a class='index' id='Swappable'></a></span><code class='itemdecl'>
 template &lt;class T&gt;
