--- a/ranges-ts/concepts.lib.corelang.signedintegral.html
+++ b/ranges-ts/concepts.lib.corelang.signedintegral.html
@@ -4,7 +4,7 @@ concept bool SignedIntegral() {
   return Integral&lt;T&gt;() &amp;&amp; is_signed&lt;T&gt;::value;
 }
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> <span class='texttt'>SignedIntegral&lt;T&gt;()</span> may be satisfied even for
-types that are not signed integral types (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.fundamental <span class='endcsname'></span>);
+types that are not signed integral types (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.fundamental'>[basic.fundamental]</a>);
 for example, <span class='texttt'>char</span>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div></div></body></html>
