--- a/ranges-ts/customization.point.object.html
+++ b/ranges-ts/customization.point.object.html
@@ -13,13 +13,13 @@ In every translation unit where such a name is defined, it shall
 refer to the same instance of the customization point object.</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >[&nbsp;<i>Note:</i> Many of the customization point objects in the library
 evaluate function call expressions with an unqualified name which
 results in a call to a user-defined function found by argument
-dependent name lookup (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.lookup.argdep <span class='endcsname'></span>). To preclude
+dependent name lookup (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.lookup.argdep'>[basic.lookup.argdep]</a>). To preclude
 such an expression resulting in a call to unconstrained functions
 with the same name in namespace <span class='texttt'>std</span>, customization point
 objects specify that lookup for these expressions is performed in
 a context that includes deleted overloads matching the signatures
 of overloads defined in namespace <span class='texttt'>std</span>. When the deleted
 overloads are viable, user-defined overloads must be more
-specialized (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> temp.func.order <span class='endcsname'></span>) or more
+specialized (  ISO/IEC 14882:2014 &sect;<a href='../n4140/temp.func.order'>[temp.func.order]</a>) or more
 constrained (Concepts TS [temp.constr.order]) to be used by a
 customization point object. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div></body></html>
