--- a/ranges-ts/depr.html
+++ b/ranges-ts/depr.html
@@ -5,7 +5,7 @@ is defined as:
 Normative for the current edition of the Ranges TS,
 but having been identified as a candidate for removal from future revisions.
 An implementation may declare library names and entities described in this section with the
-<span class='texttt'>deprecated</span> attribute (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> dcl.attr.deprecated <span class='endcsname'></span>).</p></div><div id='rvalue.ranges'><h2 ><a class='secnum' href='#rvalue.ranges' style='min-width:88pt'>A.1</a> Rvalue range access <a class='abbr_ref' href='depr.rvalue.ranges'>[depr.rvalue.ranges]</a></h2><div class='para' id='rvalue.ranges-1'><div class='marginalizedparent'><a class='marginalized' href='#rvalue.ranges-1'>1</a></div><p >Use of the range access customization point objects
+<span class='texttt'>deprecated</span> attribute (  ISO/IEC 14882:2014 &sect;<a href='../n4140/dcl.attr.deprecated'>[dcl.attr.deprecated]</a>).</p></div><div id='rvalue.ranges'><h2 ><a class='secnum' href='#rvalue.ranges' style='min-width:88pt'>A.1</a> Rvalue range access <a class='abbr_ref' href='depr.rvalue.ranges'>[depr.rvalue.ranges]</a></h2><div class='para' id='rvalue.ranges-1'><div class='marginalizedparent'><a class='marginalized' href='#rvalue.ranges-1'>1</a></div><p >Use of the range access customization point objects
 <span class='texttt'>begin</span>, <span class='texttt'>end</span>,
 <span class='texttt'>cbegin</span>, <span class='texttt'>cend</span>,
 <span class='texttt'>rbegin</span>, <span class='texttt'>rend</span>,
