--- a/ranges-ts/intro.compliance.html
+++ b/ranges-ts/intro.compliance.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='en'><head><title>[intro.compliance]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>4</a> General Principles <a class='abbr_ref' href='./#intro'>[intro]</a></h1><div id='intro.compliance'><h2 ><a class='secnum' style='min-width:88pt'>4.1</a> Implementation compliance <a class='abbr_ref'>[intro.compliance]</a></h2><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Conformance requirements for this specification are the same as those
-defined in <a href='intro.compliance'>[intro.compliance]</a> in the C++ Standard.
+defined in   ISO/IEC 14882:2014 &sect;<a href='../n4140/intro.compliance'>[intro.compliance]</a>.
 [&nbsp;<i>Note:</i>
 Conformance is defined in terms of the behavior of programs.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div></body></html>
