--- a/ranges-ts/iterator.custpoints.iter_swap.html
+++ b/ranges-ts/iterator.custpoints.iter_swap.html
@@ -4,7 +4,7 @@ object</i> (<a href='customization.point.object'>[customization.point.object]</a
 is equivalent to the following:</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p ><span class='texttt'>(void)iter_swap(E1, E2)</span>, if that expression is well-formed when
 evaluated in a context that does not include <span class='texttt'>ranges::iter_swap</span> but does
 include the lookup set produced by argument-dependent
-lookup (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.lookup.argdep <span class='endcsname'></span>) and the following declaration:
+lookup (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.lookup.argdep'>[basic.lookup.argdep]</a>) and the following declaration:
 </p><pre class='codeblock'>
 void iter_swap(auto, auto) = delete;
 </pre></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p >Otherwise, if the types of <span class='texttt'>E1</span> and <span class='texttt'>E2</span> both satisfy
