--- a/ranges-ts/iterator.range.begin.html
+++ b/ranges-ts/iterator.range.begin.html
@@ -5,7 +5,7 @@
   [&nbsp;<i>Note:</i> This deprecated usage exists so that
   <span class='texttt'>ranges::begin(E)</span> behaves similarly to <span class='texttt'>std::begin(E)</span>
   as defined in ISO/IEC 14882 when <span class='texttt'>E</span> is an rvalue. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p >Otherwise, <span class='texttt'>(E) + 0</span> if <span class='texttt'>E</span> has array
-  type (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> basic.compound <span class='endcsname'></span>).</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).begin())</span> if it is a valid expression and its type <span class='texttt'>I</span> meets the
+  type (  ISO/IEC 14882:2014 &sect;<a href='../n4140/basic.compound'>[basic.compound]</a>).</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY((E).begin())</span> if it is a valid expression and its type <span class='texttt'>I</span> meets the
   syntactic requirements of <span class='texttt'>Iterator&lt;I&gt;()</span>. If
   <span class='texttt'>Iterator</span> is not satisfied, the program is ill-formed
   with no diagnostic required.</p></li><li id='1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.4'>(1.4)</a></div><p >Otherwise, <span class='texttt'>DECAY_COPY(begin(E))</span> if it is a valid expression and its type <span class='texttt'>I</span> meets the
