--- a/ranges-ts/library.general.html
+++ b/ranges-ts/library.general.html
@@ -17,9 +17,9 @@ that C++ programs may use to perform compile-time validation of template
 parameters and perform function dispatch based on properties of types.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >The general utilities library (Clause <a href='utilities'>[utilities]</a>) includes components used
 by other library elements and components used as infrastructure in C++
 programs, such as function objects.</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >The iterators library (Clause <a href='iterators'>[iterators]</a>) describes components that C++
-programs may use to perform iterations over containers (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>),
-streams (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> iostream.format <span class='endcsname'></span>), stream buffers (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> stream.buffers <span class='endcsname'></span>),
+programs may use to perform iterations over containers (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>),
+streams (  ISO/IEC 14882:2014 &sect;<a href='../n4140/iostream.format'>[iostream.format]</a>), stream buffers (  ISO/IEC 14882:2014 &sect;<a href='../n4140/stream.buffers'>[stream.buffers]</a>),
 and ranges (<a href='ranges'>[ranges]</a>).</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >The algorithms library (Clause <a href='algorithms'>[algorithms]</a>) describes components that C++
 programs may use to perform algorithmic operations on containers
-(Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> containers <span class='endcsname'></span>) and other sequences</p></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >The numerics library (Clause <a href='numerics'>[numerics]</a>) provides concepts that are useful
+(Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>) and other sequences</p></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >The numerics library (Clause <a href='numerics'>[numerics]</a>) provides concepts that are useful
 to constrain numeric algorithms.</p></div></div></div></body></html>
