--- a/ranges-ts/meta.html
+++ b/ranges-ts/meta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang='en'><head><title>[meta]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>8</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><div id='meta'><h2 ><a class='secnum' style='min-width:88pt'>8.4</a> Metaprogramming and type traits <a class='abbr_ref'>[meta]</a></h2><div id='type.synop'><h3 ><a class='secnum' href='#type.synop' style='min-width:103pt'>8.4.1</a> Header <span class='texttt'>&lt;type_traits&gt;</span> synopsis <a class='abbr_ref' href='meta.type.synop'>[meta.type.synop]</a></h3><p ><span class='enote'>[Editor's note: Change the <span class='texttt'>&lt;type_traits&gt;</span> synopsis (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> meta.type.synop <span class='endcsname'></span>) as
+<!DOCTYPE html><html lang='en'><head><title>[meta]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>8</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><div id='meta'><h2 ><a class='secnum' style='min-width:88pt'>8.4</a> Metaprogramming and type traits <a class='abbr_ref'>[meta]</a></h2><div id='type.synop'><h3 ><a class='secnum' href='#type.synop' style='min-width:103pt'>8.4.1</a> Header <span class='texttt'>&lt;type_traits&gt;</span> synopsis <a class='abbr_ref' href='meta.type.synop'>[meta.type.synop]</a></h3><p ><span class='enote'>[Editor's note: Change the <span class='texttt'>&lt;type_traits&gt;</span> synopsis (  ISO/IEC 14882:2014 &sect;<a href='../n4140/meta.type.synop'>[meta.type.synop]</a>) as
 follows. Note: this change is intended to be made in <span class='texttt'>namespace std</span>.]</span></p><pre class='codeblock'>
 namespace std {
   [...]
@@ -55,7 +55,7 @@ Working Draft of C++17.]</span></p><div class='numberedTable' id='tab:type-trait
   <span class='added'><span class='texttt'>struct is_swappable_with;</span></span> </td><td class='left'>
   <span class='added'>The expressions <span class='texttt'>swap(declval&lt;T&gt;(),</span></span><span class='added'><span class='texttt'> declval&lt;U&gt;())</span>
   and <span class='texttt'>swap(</span></span><span class='added'><span class='texttt'>declval&lt;U&gt;(),</span></span><span class='added'><span class='texttt'> declval&lt;T&gt;())</span>
-  are each well-formed when treated as an unevaluated operand (Clause   ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr <span class='endcsname'></span>)
+  are each well-formed when treated as an unevaluated operand (Clause   ISO/IEC 14882:2014 &sect;<a href='../n4140/expr'>[expr]</a>)
   in an overload-resolution context for swappable
   values (<a href='concepts.lib.corelang.swappable'>[concepts.lib.corelang.swappable]</a>).
   Access checking is performed as if in a context unrelated to <span class='texttt'>T</span> and <span class='texttt'>U</span>.
@@ -81,7 +81,7 @@ Working Draft of C++17.]</span></p><div class='numberedTable' id='tab:type-trait
   <span class='added'><span class='texttt'>is_swappable_with_v&lt;T, </span></span><span class='added'><span class='texttt'>U&gt;</span> is <span class='texttt'>true</span> and
   each <span class='texttt'>swap</span> expression of the definition of
   <span class='texttt'>is_swappable_with&lt;T, U&gt;</span> is known not to throw
-  any exceptions (  ISO/IEC 14882:2014 &sect;  <span class='csname'></span> expr.unary.noexcept <span class='endcsname'></span>).</span> </td><td class='left'>
+  any exceptions (  ISO/IEC 14882:2014 &sect;<a href='../n4140/expr.unary.noexcept'>[expr.unary.noexcept]</a>).</span> </td><td class='left'>
   <span class='added'><span class='texttt'>T</span> and <span class='texttt'>U</span> shall be complete types,
   (possibly cv-qualified) <span class='texttt'>void</span>, or
   arrays of unknown bound.</span> </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_nothrow_swappable'></a></span><span class='texttt'><span class='added'>template &lt;class T&gt;</span></span><br/>
